RESOLVED FIXED44509
Web Inspector: don't stop on DOM breakpoints when all breakpoints are deactivated
https://bugs.webkit.org/show_bug.cgi?id=44509
Summary Web Inspector: don't stop on DOM breakpoints when all breakpoints are deactiv...
Pavel Podivilov
Reported 2010-08-24 02:52:57 PDT
Web Inspector: don't stop on DOM breakpoints when all breakpoints are deactivated
Attachments
Proposed patch. (3.57 KB, patch)
2010-08-24 03:11 PDT, Pavel Podivilov
no flags
Add fixme. (3.67 KB, patch)
2010-08-24 04:47 PDT, Pavel Podivilov
no flags
Pavel Podivilov
Comment 1 2010-08-24 03:11:38 PDT
Created attachment 65251 [details] Proposed patch.
Yury Semikhatsky
Comment 2 2010-08-24 03:47:09 PDT
Comment on attachment 65251 [details] Proposed patch. WebCore/bindings/v8/ScriptDebugServer.cpp:202 + m_breakpointsActivated = activated; If we cannot make do without the flag in ScriptDebugServer, why not use only it without one in V8? This way you wouldn't need to reset "breakpoints activated" flag each time debugger agent is being created, this would also allow to deactivate breakpoints for one page while leaving them active in other pages being rendered by the same process.
Pavel Podivilov
Comment 3 2010-08-24 04:47:53 PDT
Created attachment 65256 [details] Add fixme.
Pavel Podivilov
Comment 4 2010-08-24 04:49:23 PDT
(In reply to comment #2) > (From update of attachment 65251 [details]) > WebCore/bindings/v8/ScriptDebugServer.cpp:202 > + m_breakpointsActivated = activated; > If we cannot make do without the flag in ScriptDebugServer, why not use only it without one in V8? This way you wouldn't need to reset "breakpoints activated" flag each time debugger agent is being created, this would also allow to deactivate breakpoints for one page while leaving them active in other pages being rendered by the same process. The flag in ScriptDebugServer is used to skip native breakpoints (e.g. DOM). We may continue using V8 flag for javascript breakpoints for better performance. Added FIXME for https://bugs.webkit.org/show_bug.cgi?id=44513.
WebKit Commit Bot
Comment 5 2010-08-24 13:54:08 PDT
Comment on attachment 65256 [details] Add fixme. Rejecting patch 65256 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--wait-for-httpd', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Running build-dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 20917 test cases. http/tests/security/xssAuditor/dom-write-location-inline-event.html -> failed Exiting early after 1 failures. 20565 tests run. 728.58s total testing time 20564 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 35 test cases (<1%) had stderr output Full output: http://queues.webkit.org/results/3767583
WebKit Commit Bot
Comment 6 2010-08-25 03:23:24 PDT
Comment on attachment 65256 [details] Add fixme. Rejecting patch 65256 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--wait-for-httpd', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Last 500 characters of output: tTests Testing 20923 test cases. media/video-click-dblckick-standalone.html -> timed out Sampling process 6475 for 10 seconds with 10 milliseconds of run time between samples Sampling completed, processing symbols... Sample analysis of process 6475 written to file /Users/eseidel/Library/Logs/DumpRenderTree/HangReport.txt Exiting early after 1 failures. 17237 tests run. 658.01s total testing time 17236 test cases (99%) succeeded 1 test case (<1%) timed out 27 test cases (<1%) had stderr output Full output: http://queues.webkit.org/results/3737580
Yury Semikhatsky
Comment 7 2010-08-25 07:25:10 PDT
Comment on attachment 65256 [details] Add fixme. Clearing flags on attachment: 65256 Committed r66013: <http://trac.webkit.org/changeset/66013>
Yury Semikhatsky
Comment 8 2010-08-25 07:25:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.