2010-08-25  Pavel Podivilov  <podivilov@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: don't stop on DOM breakpoints when all breakpoints are deactivated
        https://bugs.webkit.org/show_bug.cgi?id=44509

        * bindings/v8/ScriptDebugServer.cpp:
        (WebCore::ScriptDebugServer::ScriptDebugServer):
        (WebCore::ScriptDebugServer::setBreakpointsActivated):
        (WebCore::ScriptDebugServer::breakProgram):
        * bindings/v8/ScriptDebugServer.h:
        * inspector/InspectorDebuggerAgent.cpp:
        (WebCore::InspectorDebuggerAgent::create):

Canonical link: https://commits.webkit.org/56792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66013 268f45cc-cd09-0410-ab3c-d52691b4dbfc