WebCore/bindings/v8/ScriptDebugServer.h
@@ -134,6 +134,8 @@ private:
     Page* m_pausedPage;
     v8::Local<v8::Context> m_pausedPageContext;
     bool m_enabled;
+
+    bool m_breakpointsActivated;
 };
 
 } // namespace WebCore
